--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Custom -->
-    <string name="app_name">Callture</string>
+    <string name="app_name">Callture Dialer</string>
     <string name="service_name">Linphone Service</string>
     <string name="addressbook_label">Linphone</string>
     <string name="notification_title">Linphone</string>
