--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,19 @@
 <resources>
 
     <!-- Custom -->
-    <string name="app_name">Callture Dialer</string>
-    <string name="service_name">Callture Dialer Service</string>
-    <string name="addressbook_label">Callture Dialer</string>
-    <string name="notification_title">Callture Dialer</string>
+    <string name="app_name">CallturePhone</string>
+    <string name="service_name">CallturePhone Service</string>
+    <string name="addressbook_label">CallturePhone</string>
+    <string name="notification_title">CallturePhone</string>
     <string name="wait_dialog_text">Starting up</string>
     <string name="notification_registered">%s connected</string>
     <string name="notification_register_failure">%s failed to connect</string>
     <string name="tunnel_host"></string>
-    <string name="about_version">Callture Dialer Android %s</string>
-    <string name="about_liblinphone_version">Callture Dialer Core %s</string>
-    <string name="about_liblinphone_sdk_version">Callture Dialer SDK %s</string>
+    <string name="about_version">CallturePhone Android %s</string>
+    <string name="about_liblinphone_version">CallturePhone Core %s</string>
+    <string name="about_liblinphone_sdk_version">CallturePhone SDK %s</string>
     <string name="about_privacy_policy">Visit our privacy policy</string>
-    <string name="sync_account_name">Callture Dialer contacts</string>
+    <string name="sync_account_name">CallturePhone contacts</string>
 
     <!-- Notifications -->
     <string name="notification_reply_label">Reply</string>
@@ -80,7 +80,7 @@
     <string name="assistant_validate_account_1">Your account is created. Please check your mails to validate your account:</string>
     <string name="assistant_validate_account_2">Once it is done, come back here and click on the button.</string>
     <string name="assistant_welcome_desc">This assistant will help you configure and use your SIP account.</string>
-    <string name="assistant_linphone_login_desc">Please enter your username and password of Callture Dialer account</string>
+    <string name="assistant_linphone_login_desc">Please enter your username and password of CallturePhone account</string>
     <string name="assistant_login_desc">Please enter your username and password with your SIP domain</string>
     <string name="assistant_remote_provisioning_desc">Please provide your provisioning URL</string>
     <string name="transport">Transport</string>
@@ -91,7 +91,7 @@
     <string name="assistant_create_account_part_1">Please confirm your country code and enter your phone number</string>
     <string name="assistant_create_account_part_2">We have sent you a SMS with a validation code to your phone number:</string>
     <string name="assistant_create_account_part_3">To complete your phone number verification, please enter the 4 digit code below:\n</string>
-    <string name="assistant_create_account_part_email">Please enter an username, email and password for your Callture Dialer account</string>
+    <string name="assistant_create_account_part_email">Please enter an username, email and password for your CallturePhone account</string>
     <string name="assistant_display_name_optional">Display name (optional)</string>
     <string name="assistant_linphone_account">Use your Linphone account</string>
     <string name="assistant_generic_account">Use SIP account</string>
@@ -130,9 +130,9 @@
     <string name="use_email_for_validation">Use email address for account validation</string>
     <string name="login_with_username">Use your username and password instead of your phone number</string>
     <string name="phone_number_info_title">What will my phone number be used for?</string>
-    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using Callture Dialer and your friends will know that they can reach you on Callture Dialer as well.\n</string>
-    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using Callture Dialer and your friends will know that they can reach you on Callture Dialer as well.\n</string>
-    <string name="phone_number_link_info_content_already_account">You can only use your phone number with one Callture Dialer account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
+    <string name="phone_number_info_content">\nThanks to your phone number, your friends will find you more easily.\n\n You will see in your address book who is using CallturePhone and your friends will know that they can reach you on CallturePhone as well.\n</string>
+    <string name="phone_number_link_info_content">\nYour friends will find you more easily if you link your account to your phone number\n\nYou will see in your address book who is using CallturePhone and your friends will know that they can reach you on CallturePhone as well.\n</string>
+    <string name="phone_number_link_info_content_already_account">You can only use your phone number with one CallturePhone account.\n\nIf you had already linked your number to an other account but you prefer to use this one, simply link it now and your number will automatically be moved to this account.</string>
     <string name="phone_number_overuse">Too much SMS have been sent to this number in a short period of time, try again in 24 hours.</string>
     <string name="account_doesnt_exist">Account doesn\'t exist</string>
 
@@ -185,7 +185,7 @@
     <string name="contact_last_name">Last name</string>
     <string name="contact_organization">Organization</string>
     <string name="invite_friend">Invite</string>
-    <string name="invite_friend_text">Hello, join me on Callture Dialer! You can download it for free at %s</string>
+    <string name="invite_friend_text">Hello, join me on CallturePhone! You can download it for free at %s</string>
     <string name="toast_choose_contact_for_edition">Select a contact or create a new one</string>
 
     <!-- Chat -->
@@ -462,7 +462,7 @@
 
     <!-- Contact settings -->
     <string name="pref_contact_sync_title">Presence information in native contact</string>
-    <string name="pref_contact_sync_subtitle">Inserting information shortcuts from the Callture Dialer contact into native Android contacts</string>
+    <string name="pref_contact_sync_subtitle">Inserting information shortcuts from the CallturePhone contact into native Android contacts</string>
     <string name="pref_contact_title">Contact</string>
     <string name="pref_contact_display_contact_organization_title">Display contact organization</string>
     <string name="pref_create_contact_shortcuts">Create shortcuts in launcher</string>
@@ -477,7 +477,7 @@
     <string name="pref_sipinfo_dtmf">Send out-band DTMFs (SIP INFO)</string>
     <string name="pref_call_timeout_title">Call timeout (in seconds)</string>
     <string name="pref_voice_mail">Voice mail URI</string>
-    <string name="pref_dialer_call">Use Callture Dialer as default phone app</string>
+    <string name="pref_dialer_call">Use CallturePhone as default phone app</string>
     <string name="pref_accept_early_media">Accept early-media</string>
     <string name="pref_grant_read_dnd_settings_permission_title">Do Not Disturb settings</string>
     <string name="pref_grant_read_dnd_settings_permission_desc">We need you to grant use the access to the Do Not Disturb settings to correctly ring or not depending on the current policy</string>
@@ -535,7 +535,7 @@
     <string name="pref_friendlist_subscribe">Friendlist subscribe</string>
     <string name="pref_background_mode">Background mode</string>
     <string name="pref_background_mode_desc">Show a notification to keep the app alive</string>
-    <string name="pref_background_mode_warning_desc">Callture Dialer has been restricted for background usage, please authorize it first</string>
+    <string name="pref_background_mode_warning_desc">CallturePhone has been restricted for background usage, please authorize it first</string>
     <string name="pref_animation_enable_title">Enable Animations</string>
     <string name="pref_service_notification">Enable service notification</string>
     <string name="pref_autostart">Start at boot time</string>
@@ -599,7 +599,7 @@
     <string name="content_description_search_contact">Search contact</string>
     <string name="content_description_search_country">Search country</string>
     <string name="content_description_all_contacts">All contacts</string>
-    <string name="content_description_linphone_contacts">Callture Dialer contacts</string>
+    <string name="content_description_linphone_contacts">CallturePhone contacts</string>
     <string name="content_description_call_direction">Call direction</string>
     <string name="content_description_all_calls">All calls</string>
     <string name="content_description_missed_calls">Missed calls</string>
@@ -642,8 +642,8 @@
     <string name="content_description_call_options">Call options</string>
     <string name="content_description_audio_route">Audio route</string>
     <string name="content_description_exit_conference">Exit conference</string>
-    <string name="content_title_notification_service">Callture Dialer notification</string>
-    <string name="content_title_notification">Callture Dialer instant messages notifications</string>
+    <string name="content_title_notification_service">CallturePhone notification</string>
+    <string name="content_title_notification">CallturePhone instant messages notifications</string>
     <string name="content_description_conversation_subject">Group chat room subject</string>
     <string name="content_description_conversation_infos">Group chat room info</string>
     <string name="content_description_record_call">Record call</string>
